Attempt to fix vertical align for tag pills

--- a/assets/css/tag.css
+++ b/assets/css/tag.css
@@ -61,6 +61,7 @@ html[data-theme="light"] {
     font-size: 14px !important;
     font-weight: 600 !important;
     height: 24px !important;
+    line-height: 24px !important;
     padding-left: 8px !important;
     padding-right: 8px !important;
     text-align: center !important;
